--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="about-image" id="about">
-        <img src="images/about.jpg" alt="A person holding a pen"/>
+        <img src="images/about.jpg" alt="A person picking up a pen"/>
       </div>
       
       <div class="about text-block" tabindex="0">
@@ -47,7 +47,7 @@
       </div>
 
       <div class="clients-image" id="clients">
-        <img src="images/clients.jpg" alt="Clients Chatting"/>
+        <img src="images/clients.jpg" alt="Clients Talking"/>
       </div>
 
       <div class="clients text-block" tabindex="0">
@@ -56,7 +56,7 @@
       </div>
 
       <div class="contact-image" id="contact">
-        <img src="images/contact.jpg" alt ="A person on a call"/>
+        <img src="images/contact.jpg" alt ="Someone talking on the phone"/>
       </div>
 
       <div class="contact text-block" tabindex="0">
